# tpm2_algtest_ui

./: CMakeLists.txt  main.cpp  main.py  tpm2-algtest-ui.py  tpm2-algtest-ui.spec.rpkg
res/: convert.sh  tpm2-algtest-ui.desktop
